# MTC_Download

./: .gitignore  API_ANALYSIS.md  AUTO_RUN_NO_PAUSE.bat  BLUESTACKS_SETUP.md  CAU_HINH_BLUESTACKS_CHI_TIET.md  CHANGELOG.md  CHANGES_SUMMARY.md  DONE.txt  FINAL_REPORT.txt  FINAL_SUMMARY.md  FIX_SUMMARY.md  HOAN_TAT_CAI_DAT.md  HOW_TO_RUN.txt  HUONG_DAN.md  HUONG_DAN.txt  HUONG_DAN_CAU_HINH.txt  HUONG_DAN_TIM_KEY.md  INDEX.md  INTEGRATED_SYSTEM_README.md  LICENSE  MANIFEST.in  NHAN_ENTER_DE_TIEP_TUC.txt  PROJECT_COMPLETE.txt  PROJECT_STATUS.txt  QUICKSTART.md  README.bat  README.md  README.txt  README_COMPLETE.md  README_FINAL.md  RUN_THIS.bat  SETUP_SUMMARY.md  SIMPLE_RUN.bat  START_HERE.md  START_MITM.bat  SUMMARY.md  Sync-Wasabi-Flexible.ps1  TIMEOUT_IMPROVEMENTS.md  TONG_KET.md  TONG_KET_VA_HUONG_DAN.md  (+415 more)
Tận_Thế_Chi_Siêu_Thị_Hệ_Thống/: Chương 1.txt  Chương 10.txt  Chương 11.txt  Chương 12.txt  Chương 2.txt  Chương 3.txt  Chương 4.txt  Chương 5.txt  Chương 6.txt  Chương 7.txt  Chương 8.txt  Chương 9.txt
apk_decoded/: AndroidManifest.xml  apktool.yml
data/: _ui_dump.xml  all_books.json  books.txt  completed_books.json  completed_books_fresh.json  sample_books_status2.json
docs/: DART_DECOMPILE_GUIDE.md  DECRYPTION_GUIDE.md  MITMPROXY_GUIDE.md  QUICKSTART.md  README.md  SNYK_COMMANDS.md  SUMMARY.md
download/: __init__.py  api.py  app.py  batch.py  cli.py
downloads/: .book_id_cache.json
legacy/: old_adb.py
logs/: _validate_pending.py  all_id_unfinished_missing_repo.json  all_id_unfinished_scan.json  audit_and_fill_full_library_report.json  audit_mtc_continune_local.py  auto_commit_state.json  auto_validate_reconcile_commit.py  batch_completed_1200_1500_state.json  batch_completed_1500_2100_state.json  batch_completed_200_400_state.json  batch_completed_400_700_state.json  batch_completed_700_1200_state.json  batch_completed_small_state.json  bookmark_resume_bg.out  bookmarked_books_manifest.json  build_exact_free_completed_queue.py  bulk_folder_commit_results.json  changed_folders_gap_report.json  chapter_count_mismatch_report.json  clean_remaining_title_fragments.json  collision_final_merge_report.json  collision_merge_report.json  commit_done_folders_results.json  completed_alnum_final_validation.json  completed_alnum_quick_index.json  completed_cleanup_commit_batches_resume.json  completed_duplicates_deleted_from_continune.json  completed_in_continune_scan.json  completed_missing_folder_queue.json  completed_missing_now.json  danmachi_unlocked_redownload_report.json  decrypt_residue_files.json  deep_scan_completed.json  deleted_tail_extra_chapter_files.json  download_all_missing_state.json  download_hidden_discovered_state.json  download_metadata_only_batch1.json  download_metadata_only_batch_small.json  download_metadata_only_folders_report.json  download_top_bookmarks_to_mtc.json  (+134 more)
mtc/: __init__.py  adb.py  api.py  app.py  config.py  downloader.py  pipeline.py  ui.py  utils.py
mtc_extracted/: AndroidManifest.xml  helper.dex  kotlin-tooling-metadata.json  resources.arsc
novel_exports/: Mạt Thế Vô Hạn Thôn Phệ.txt  (+3 more)
(+1885 files in other folders)
