[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mtc_download"
version = "1.0.0"
description = "MTC/NovelFever novel downloader via ADB + BlueStacks automation."
readme = "README.md"
requires-python = ">=3.10"
keywords = ["mtc", "novelfever", "download", "adb", "bluestacks"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
    "Environment :: Console",
]

dependencies = [
    "requests>=2.31",
    "urllib3>=2.0",
    "pycryptodome>=3.19",
    "ftfy>=7.1.1",
]

[project.optional-dependencies]
frida = ["frida>=16.1.0"]
dev   = ["pytest>=8.0", "pytest-timeout>=2.3"]

[project.scripts]
mtc-download = "download_all:main"
mtc-export   = "export_all:main"
mtc-batch    = "api_batch:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mtc*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
